# payment_system

./: .gitignore  Dockerfile  LICENSE  README.md  data.go  first_implementation.md  go.mod  go.sum  main.go  second_implementation.md
frankstrain/app/: main.py
frankstrain/payment_system/: Dockerfile  go.sum
frankstrain/payment_system/src/api/: api.go
frankstrain/payment_system/src/cmd/: root.go
frankstrain/payment_system/src/db_scripts/: schema.go
frankstrain/payment_system/src/ports/: account_query.go  (+5 more)
frankstrain/stackoverflow_dashboard/: system_idea.md
frankstrain/stackoverflow_dashboard/py_graphql_api/: pyproject.toml  queries_possibilities.txt  schema.graphql  tables.sql
frankstrain/stackoverflow_dashboard/py_graphql_api/src/: app.py  container.py  post_histogram.py  resolvers.py
frankstrain/stackoverflow_dashboard/py_graphql_api/src/data/: db_utils.py  posts.py  votes.py
frankstrain/stackoverflow_dashboard/py_graphql_api/src/graphql_api/: app.py
frankstrain/stackoverflow_dashboard/py_graphql_api/src/types/: container.py  posts.py  votes.py
frankstrain/standalone_scripts/: stackoverflow_data.py
infra/: start_db.sh  start_db.ssh  start_rabbitmq.sh  start_rabbitmq.ssh  start_redis.sh
src/api/: api.go  payment.go
src/cmd/: root.go
src/ports/: distributed_lock.go  payment_query.go  worker.go
src/query_services/: account.go  payments.go
src/settings/: settings.go
src/shared_deps/: deps.go  locks.go  queue.go
src/types/: types.go
src/usecases/: process_payment.go  processing_rules.go  start_payment.go
src/workers/: worker.go
(+7 files in other folders)
